fix: add align-items in favorite-dishes

--- a/src/app/components/main/components/favorite-dish/favorite-dish.component.css
+++ b/src/app/components/main/components/favorite-dish/favorite-dish.component.css
@@ -38,6 +38,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 16px;
   padding: 32px;
   flex-wrap: wrap;
